--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -4,37 +4,43 @@
   height: 50px;
   letter-spacing: 0.5px;
   line-height: 50px;
-  padding: 0 35px 0 35px;
+  padding: 0 50px 0 50px; // Increased padding
   font-size: 15px;
-  background-color: black;
-  color: white;
-  text-transform: uppercase;
-  font-family: "Open Sans Condensed";
-  font-weight: bolder;
+  background-color: #bebebe; // Lighter background color
+  color: #333; // Dark gray color
+  text-transform: none; // No text transform
+
+  font-weight: 500; // Medium font weight
   border: none;
   cursor: pointer;
   display: flex;
   justify-content: center;
+  border-radius: 10px; // Added border radius
+
   &:hover {
-    background-color: white;
-    color: black;
-    border: 1px solid black;
+    background-color: #e0e0e0; // Light gray hover background
+    color: #333; // Keep color consistent
+    border: none;
   }
+
   &.google-sign-in {
     background-color: #4285f4;
     color: white;
+
     &:hover {
       background-color: #357ae8;
       border: none;
     }
   }
+
   &.inverted {
-    background-color: white;
-    color: black;
-    border: 1px solid black;
+    background-color: #333; // Dark gray color
+    color: #f8f8f8; // Light text color
+    border: none;
+
     &:hover {
-      background-color: black;
-      color: white;
+      background-color: #222; // Slightly darker gray hover background
+      color: #f8f8f8; // Keep color consistent
       border: none;
     }
   }
