--- a/src/components/category-item/category-item-styles.scss
+++ b/src/components/category-item/category-item-styles.scss
@@ -3,16 +3,22 @@
   height: 240px;
   flex: 1 1 auto;
   display: flex;
+  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
-  margin: 0 7.5px 15px;
+  border: 1px solid #ccc;
+  margin: 15px;
   overflow: hidden;
+  border-radius: 15px; // Added rounded corners
+  background-color: #f8f8f8; // Light background6
+
+  cursor: pointer;
+  transition: transform 0.5s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+
   &:hover {
-    cursor: pointer;
+    transform: scale(1.02);
+    box-shadow: 0 6px 10px 0 hsla(0, 0%, 0%, 0.3); // Change the shadow when hovering
     & .background-image {
-      transform: scale(1.1);
-      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
     & .category-body-container {
       opacity: 0.9;
@@ -20,12 +26,6 @@
   }
   &.large {
     height: 380px;
-  }
-  &:first-child {
-    margin-right: 7.5px;
-  }
-  &:last-child {
-    margin-left: 7.5px;
   }
   .background-image {
     width: 100%;
@@ -35,24 +35,24 @@
   }
   .category-body-container {
     height: 90px;
-    padding: 0 25px;
+    padding: 20px; // More padding
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
-    background-color: white;
-    opacity: 0.7;
+    border-radius: 15px; // Added rounded corners
+    background-color: rgba(255, 255, 255, 0.9); // Semi-transparent background
     position: absolute;
     h2 {
       font-weight: bold;
       margin: 0 6px 0;
       font-size: 22px;
-      color: #4a4a4a;
+      color: #333; // Dark gray color
     }
     p {
       font-weight: lighter;
       font-size: 16px;
+      color: #666; // Lighter gray color
     }
   }
 }
