--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -2,22 +2,17 @@
   display: flex;
   align-items: center;
   height: 70px;
-  background-color: #333;
+  background-color: #191818; // Light background color
 
   .logo-container {
     flex: 1;
     text-align: left;
     padding: 25px;
 
-    // .logo {
-    //   width: 30px;
-    //   height: 100%;
-    //   fill: #fff;
-    // }
     .logo {
       width: 30px;
       height: 100%;
-      fill: rgb(183, 183, 183);
+      fill: rgb(0, 122, 255); // Blue logo color
     }
   }
 
@@ -27,15 +22,15 @@
     padding: 25px;
 
     .nav-link {
-      color: grey;
-      font-size: 1.2rem;
-      text-transform: uppercase;
-      font-weight: bold;
+      color: #ffffff; // Dark gray color
+      font-size: 1rem; // Uniform font size
+      text-transform: none; // No text transformation
+      font-weight: 500; // Medium font weight
       margin: 0 1rem;
       transition: all 0.3s ease-in-out;
 
       &:hover {
-        color: white;
+        color: rgb(0, 122, 255); // Blue hover color
       }
     }
   }
